# auxlab2

./: .gitignore  ASYNC_RECORDING_IMPLEMENTATION_PLAN.md  CMakeLists.txt  GRAPHICS_HANDLE_IMPLEMENTATION_PLAN.md  MANUAL_CHECKLIST_AUXLAB2_GRAPHICS_PLAY_RECORD.md  README.md  RELEASE.md  TEST_PLAN_GRAPHICS_PLAY_RECORD.md  TUTORIAL_GUI_AND_DEBUGGING.md  VERSION
cmake/: Auxlab2RuntimeDeploy.cmake.in
resources/windows/: auxlab2.rc
scripts/: make_icns.sh
src/: AuxEngineFacade.cpp  AuxEngineFacade.h  BinaryObjectWindow.cpp  BinaryObjectWindow.h  BuildInfo.h.in  CellMembersWindow.cpp  CellMembersWindow.h  CommandConsole.cpp  CommandConsole.h  DebugCodeEditor.cpp  DebugCodeEditor.h  GraphicsManager.cpp  GraphicsManager.h  GraphicsObjects.cpp  GraphicsObjects.h  MainWindow.cpp  MainWindow.h  SignalGraphWindow.cpp  SignalGraphWindow.h  SignalTableWindow.cpp  SignalTableWindow.h  StructMembersWindow.cpp  StructMembersWindow.h  TextObjectWindow.cpp  TextObjectWindow.h  UdfDebugWindow.cpp  UdfDebugWindow.h  main.cpp
